<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fr.formiko</groupId>
  <artifactId>Formiko</artifactId>
  <packaging>jar</packaging>
  <version>0.1.6</version>
  <name>FormikoLauncher</name>
  <description>Launcher of the Formiko Game</description>
  <url>https://formiko.fr</url>
  <!-- <docsUrl>https://formiko.fr/FormikoLauncher/javadoc/fr/formiko/formikolauncher/package-summary.html</docsUrl> -->

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>18</java.version>
    <app.main.class>fr.formiko.formikolauncher.Main</app.main.class>
    <app.distribution.directory>${project.build.directory}/distributions/app</app.distribution.directory>
  </properties>

  <licenses>
    <license>
      <name>Formiko License</name>
      <url>https://raw.githubusercontent.com/HydrolienF/Formiko/master/LICENSE.md</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>HydrolienF</id>
      <name>hydrolien</name>
    </developer>
  </developers>


  <repositories>
    <repository>
        <id>jitpack.io</id>
        <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Usual -->
    <dependency>
	    <groupId>com.github.HydrolienF</groupId>
	    <artifactId>usual</artifactId>
	    <version>0.2.44</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>maven</executable>
          <mainClass>${app.main.class}</mainClass>
          <!-- optional -->
          <arguments>
            <args>${args}</args>
            <!-- <argument>myproject:dist</argument> -->
          </arguments>
          <!-- <environmentVariables>
            <LANG>en_US</LANG>
          </environmentVariables> -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgument>-Xlint:all</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <runOrder>alphabetical</runOrder>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.7</version>
        <executions>
            <execution>
                <goals>
                    <goal>prepare-agent</goal>
                </goals>
            </execution>
            <!-- attached to Maven test phase -->
            <execution>
                <id>report</id>
                <phase>test</phase>
                <goals>
                    <goal>report</goal>
                </goals>
            </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifest>
            <addClasspath>true</addClasspath>
            <mainClass>${app.main.class}</mainClass>
            <!-- <classpathPrefix>dependency-jars/</classpathPrefix> -->
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <attach>false</attach>
          <appendAssemblyId>false</appendAssemblyId>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <index>true</index>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>${app.main.class}</mainClass>
            </manifest>
            <!-- <manifestEntries> -->
              <!-- <mode>development</mode> -->
              <!-- <key>value</key> -->
            <!-- </manifestEntries> -->
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <author>true</author>
          <version>true</version>
          <quiet>true</quiet>
          <show>private</show>
          <locale>en_US</locale>
          <reportOutputDirectory>./docs/</reportOutputDirectory>
          <destDir>./javadoc/</destDir>
          <doctitle>Javadoc of Formiko</doctitle>
          <windowtitle>Javadoc of Formiko</windowtitle>
          <stylesheetfile>docs/javadoc/styles.css</stylesheetfile>
          <header>
            &#60;ul id="buttons-bar"&#62;
              &#60;li class="mainButon" id="button-home-page"&#62;&#60;a href="https://formiko.fr/"&#62;Home&#60;/a&#62;&#60;/li&#62;
              &#60;li class="mainButon" id="button-download-page"&#62;&#60;a href="https://formiko.fr/download"&#62;Download&#60;/a&#62;&#60;/li&#62;
              &#60;li class="mainButon" id="button-github-page"&#62;&#60;a href="https://github.com/HydrolienF/Formiko/"&#62;Github&#60;/a&#62;&#60;/li&#62;
              &#60;li class="mainButon" id="button-javadoc-page"&#62;&#60;a href="https://formiko.fr/Formiko/javadoc/"&#62;Javadoc&#60;/a&#62;&#60;/li&#62;
            &#60;/ul&#62;
          </header>
          <additionalparam>-Xdoclint:none</additionalparam>
          <additionalOptions>-Xdoclint:none</additionalOptions>
          <additionalJOption>-Xdoclint:none</additionalJOption>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
